# rustic_rover

./: Cargo.toml  README.md
.github/workflows/: rust.yml
config/: default.yaml  default2.yaml  hakobudake.yaml  hiroudake.yaml  tarakomaru.yaml  zikoichi.yaml
scripts/: run.sh  set_permission.sh
src/: core.rs  dualshock.rs  iced_app_utils.rs  iced_utils.rs  interface.rs  lib.rs  main.rs  packet.rs  rr_core.rs  settings.rs  thread_connection.rs
src/core/: dualshock.rs  interface.rs  packet.rs  thread_connection.rs  utils.rs
src/rr_core/: controller_driver.rs  controller_manager.rs  dualshock.rs  external_driver.rs  home_manager.rs  interface.rs  packet.rs  packet_manager.rs  save_data.rs  save_data_manager.rs  serial.rs  serial_manager.rs  thread_connection.rs  udp_manager.rs  utils.rs
src/rr_core/controller_driver/: dualsense.rs  dualshock4.rs  interface.rs  xbox.rs
src/rr_core/external_driver/: interface.rs  serial.rs
