[package]
name = "rustic_rover"
version = "1.6.1"
edition = "2021"

[dependencies]
iced = {version="0.12.0", features=["image"]}
iced_aw = { version = "0.9.0", default-features = false, features=["tabs", "icons"]}

tokio = {version = "1", features=["full"]}
hidapi = "2.6.0"
serialport = "4.2.0"
yaml-rust = "0.4"
local-ip-address = "0.6.1"