[package]
name = "rustic_rover"
version = "2.1.1"
edition = "2021"

[dependencies]
iced = {version="0.12.1", features=["image"]}
iced_aw = { version = "0.9.0", default-features = false, features=["tabs", "icons", "number_input"]}
iced_native = "0.10.3"

tokio = {version = "1", features=["full"]}
hidapi = "2.6.0"
serialport = "4.2.0"
yaml-rust = "0.4"
local-ip-address = "0.6.1"